# Airline-data-sql-manipulation

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
