[project]
name = "airline-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipynb>=0.5.1",
    "ipython>=9.10.0",
    "ipython-sql>=0.5.0",
    "jupyter-core>=5.9.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "sqlalchemy>=2.0.46",
]
